fix: make pom.xml more reliable